--- a/requests/shared.yaml
+++ b/requests/shared.yaml
@@ -77,6 +77,10 @@ schemas:
     example: 2023-09-05T11:27:06.437000
     description: A date in the format YYYY-MM-DDTHH:MM:SS.mmmmmm
 
+  display_value:
+    type: string
+    description: The human readable value of the record the URI points to
+
   email:
     type: string
     example: bob@example.com
@@ -90,6 +94,13 @@ schemas:
     type: string
     example: 1234567890
     description: Vehicle identifying number (VIN in modern cars)
+
+  legacy_uid:
+    type: string
+    example: 1234567890
+    description: |
+      A third part or external unique identifier, sometimes from a legacy system.
+      Can also be a psuedo-random string to enforce uniqueness.
 
   number_as_string:
     type: string
@@ -148,6 +159,14 @@ schemas:
   #
   # Sub-Packets
   #
+
+  expanded_uri:
+    type: object
+    properties:
+      display_value:
+        $ref: '#/schemas/display_value'
+      ref:
+        $ref: '#/schemas/uri'
 
   user_account:
     type: object
@@ -295,6 +314,21 @@ responses:
       description: Binary PDF file
       content:
         application/pdf:
+          schema:
+            type: string
+            format: binary
+    '400':
+      description: Bad request, see the error field for details
+    '401':
+      description: Unauthorized is the status code to return when the client provides no credentials or invalid credentials.
+    '403':
+      description: Forbidden is the status code to return when a client has valid credentials but not enough privileges to perform an action on a resource.
+
+  standard_xlsx:
+    '200':
+      description: Binary XLSX file
+      content:
+        application/vnd.openxmlformats-officedocument.spreadsheetml.sheet:
           schema:
             type: string
             format: binary
