--- a/requests/SelfservicePublic.yaml
+++ b/requests/SelfservicePublic.yaml
@@ -2,7 +2,11 @@ Web:
   get:
     summary: App - Public Pages
     description: |
-      public pages for sheepCRM Self-service
+      All pages (and index pages) are accessed through a single endpoint.
+      The `path` is a required parameter and the response will be a page config block
+      and zero or more resources. (A page will have just one resources, an index
+      page may have many.) User credentials are optional but may be required
+      if the page is not public or is only for members.
     tags:
       - App
     parameters:
@@ -13,15 +17,18 @@ Web:
           $ref: 'shared.yaml#/schemas/bucket'
       - name: path
         in: query
-        description: The path to the file
+        description: |
+          The URL path (after the domain name).
+          All paths should end with a trailing slash.
         schema:
-          type: "string"
+          type: string
           example: "archive-introduction/"
-      - name: "user_query"
+      - name: user_query
         in: query
-        description: "a dictionary of search terms"
+        description: |
+          A dictionary of query terms which are merged with the base query for the index page (if present).
         schema:
-          type: "object"
+          $ref: '#/schemas/page_user_query'
     responses:
       '200':
         description: Successful operation - a page response
@@ -33,6 +40,36 @@ Web:
         description: a standard error message
       '401':
         description: Authentication error
+
+schemas:
+  page_user_query:
+    type: "object"
+    properties:
+      creator:
+        type: "string"
+        example: "John Smith"
+      date_lower:
+        $ref: 'shared.yaml#/schemas/date'
+      date_upper:
+        $ref: 'shared.yaml#/schemas/date'
+      legacy_uid:
+        $ref: 'shared.yaml#/schemas/legacy_uid'
+      tags:
+        type: "array"
+        items:
+          type: "string"
+        example: ["tag1", "tag2"]
+      title:
+        type: "string"
+        example: "My Title"
+      sort:
+        type: "string"
+        example: "title"
+        enum: ["title", "date", "-title", "-date"]
+        description: |
+          Sort the results by `title` or `date` (default).
+          To specify descending order for a field, prefix the field with a `-`
+          e.g. `-date`
 
 responses:
   page:
