segment config, count & lookup

--- a/requests/Segments.yaml
+++ b/requests/Segments.yaml
@@ -82,6 +82,85 @@ SegmentAction:
       '401':
         description: Authentication error
 
+SegmentConfig:
+  get:
+    summary: Segment - Config
+    description: |
+      The config for a segment
+    tags:
+      - Segments
+    parameters:
+      $ref: 'shared.yaml#/parameters/split_uri'
+    responses:
+      '200':
+        description: |
+          The segment configuration
+        content:
+          application/json:
+            schema:
+              $ref: '#/responses/config'
+      '400':
+        description: a standard error message
+      '401':
+        description: Authentication error
+
+SegmentCount:
+  get:
+    summary: Segment - Count
+    description: |
+      The count and description of the segment
+    tags:
+      - Segments
+    parameters:
+      $ref: 'shared.yaml#/parameters/split_uri'
+    responses:
+      '200':
+        description: |
+          The count and description of the segment
+        content:
+          application/json:
+            schema:
+              $ref: '#/responses/count'
+      '400':
+        description: a standard error message
+      '401':
+        description: Authentication error
+
+SegmentLookup:
+  get:
+    summary: Segment - Lookup
+    description: |
+      The lookup for a segment
+    tags:
+      - Segments
+    parameters:
+      - name: bucket
+        in: path
+        required: true
+        schema:
+          $ref: 'shared.yaml#/schemas/bucket'
+      - name: uid
+        in: path
+        required: true
+        schema:
+          $ref: 'shared.yaml#/schemas/uid'
+      - name: q
+        in: query
+        required: false
+        schema:
+          $ref: 'shared.yaml#/schemas/uid'
+    responses:
+      '200':
+        description: |
+          A list of segments matching the search terms
+        content:
+          application/json:
+            schema:
+              $ref: '#/responses/lookup'
+      '400':
+        description: a standard error message
+      '401':
+        description: Authentication error
 
 responses:
   action:
@@ -107,3 +186,121 @@ responses:
       verbose:
         type: boolean
         example: false
+
+  config:
+    type: object
+    properties:
+      mapping:
+        type: object
+        properties:
+          collection:
+            type: string
+          contact_field: {}
+          contact_search_fields:
+            type: array
+            items: {}
+          field_list:
+            type: array
+            items:
+              type: string
+          fields:
+            type: array
+            items:
+              type: object
+              properties:
+                field:
+                  type: string
+                form_type:
+                  type: string
+                label:
+                  type: string
+                style:
+                  type: string
+          join_orgs:
+            type: boolean
+          join_people:
+            type: boolean
+          name:
+            type: string
+          name_singular:
+            type: string
+          prefix:
+            type: string
+          search_fields:
+            type: array
+            items:
+              type: string
+          search_placeholder:
+            type: string
+          sort_by:
+            type: array
+            items:
+              type: array
+          unique_field:
+            type: string
+          use_mapreduce:
+            type: boolean
+      resource_type:
+        type: string
+      segment:
+        $ref: 'shared.yaml#/schemas/uri'
+      segment_type:
+        type: string
+        enum:
+          - dynamic
+          - static
+          - hybrid
+          - auxiliary
+      user_groups:
+        type: array
+        items: {}
+      user_groups_for_display:
+        type: array
+        items: {}
+      user_interface:
+        type: object
+        properties:
+          can_bypass_gdpr:
+            type: array
+            items:
+              type: boolean
+          can_create_segment:
+            type: boolean
+          can_delete_segment:
+            type: boolean
+          can_edit_segment:
+            type: boolean
+          can_restore_segment:
+            type: boolean
+      view_context:
+        type: array
+        items:
+          type: string
+
+  count:
+    type: object
+    properties:
+      count:
+        type: integer
+      description:
+        type: string
+      segment:
+        $ref: 'shared.yaml#/schemas/uri'
+
+  lookup:
+    type: array
+    items:
+      type: object
+      properties:
+        display_value:
+          $ref: 'shared.yaml#/schemas/display_value'
+        id:
+          $ref: 'shared.yaml#/schemas/uri'
+        label:
+          type: string
+        text:
+          type: string
+        uri:
+          $ref: 'shared.yaml#/schemas/uri'
+        value:
+          $ref: 'shared.yaml#/schemas/uri'
