--- a/requests/Segments.yaml
+++ b/requests/Segments.yaml
@@ -1,3 +1,77 @@
+Segments:
+  get:
+    operationId: segmentsActive
+    summary: Segments - All active segments
+    description: |
+      Segments are groups of records that can be used for browsing or bulk actions. This endpoint returns a list of all the active segments in the system.
+    tags:
+      - Segments
+    parameters:
+      - name: bucket
+        in: path
+        required: true
+        schema:
+          $ref: 'shared.yaml#/schemas/bucket'
+      - name: page_size
+        in: query
+        required: false
+        schema:
+          $ref: 'shared.yaml#/schemas/page_size'
+      - name: page
+        in: query
+        required: false
+        schema:
+          $ref: 'shared.yaml#/schemas/page'
+    responses:
+      '200':
+        description: |
+          The segments
+        content:
+          application/json:
+            schema:
+              $ref: '#/responses/all'
+      '400':
+        description: a standard error message
+      '401':
+        description: Authentication error
+
+SegmentsAll:
+  get:
+    operationId: segments
+    summary: Segments - All segments
+    description: |
+      A list of all the segments in the system including inactive segments.
+    tags:
+      - Segments
+    parameters:
+      - name: bucket
+        in: path
+        required: true
+        schema:
+          $ref: 'shared.yaml#/schemas/bucket'
+      - name: page_size
+        in: query
+        required: false
+        schema:
+          $ref: 'shared.yaml#/schemas/page_size'
+      - name: page
+        in: query
+        required: false
+        schema:
+          $ref: 'shared.yaml#/schemas/page'
+    responses:
+      '200':
+        description: |
+          The segments
+        content:
+          application/json:
+            schema:
+              $ref: '#/responses/all'
+      '400':
+        description: a standard error message
+      '401':
+        description: Authentication error
+
 SegmentAction:
   post:
     operationId: segmentAction
@@ -124,12 +198,7 @@ SegmentAll:
           $ref: 'shared.yaml#/schemas/verbose'
     responses:
       '200':
-        description: |
-          The segments
-        content:
-          application/json:
-            schema:
-              $ref: '#/responses/all'
+        description: a list of records with contents depending on segment type
       '400':
         description: a standard error message
       '401':
