/selfservice-pdf/v2/{bucket}/form_response

--- a/toc.yaml
+++ b/toc.yaml
@@ -474,6 +474,8 @@ paths:
   #
   # Self Service / App API - PDFs
   #
+  /selfservice-pdf/v2/{bucket}/form_response:
+    $ref: 'requests/Selfservice.yaml#/FormResponse'
 
   /selfservice-pdf/v2/{bucket}/{resource_type}/{uid}/invoice/{signature}/pdf:
     $ref: 'requests/SelfservicePDF.yaml#/InvoicePDF'
